# ComputerScienceIA

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  runbashtutorial
cmake/Modules/: FindReadline.cmake
include/: .bashtutorial.h.swp  .menu.h.swp  .menuentry.h.swp  .submenu.h.swp  .tutorial.h.swp  .tutorialaction.h.swp  bashcommandline.h  bashtutorial.h  btfunctions.h  menu.h  menuentry.h  submenu.h  tutorial.h  tutorialaction.h
src/: .bashtutorial.cpp.swp  .main.cpp.swp  .menu.cpp.swp  .menuentry.cpp.swp  .submenu.cpp.swp  .tutorial.cpp.swp  .tutorialaction.cpp.swp  bashcommandline.cpp  bashcommandline.h  bashtutorial.cpp  btfunctions.cpp  main.cpp  menu.cpp  menuentry.cpp  submenu.cpp  tutorial.cpp  tutorialaction.cpp
tutorials/: .tutorder  start.tut
tutorials/BasicCommands/: .tutorder  cp.tut  directories.tut  executingfiles.tut  ls.tut  mv.tut  pwd.tut  rm.tut
tutorials/ImportantConcepts/: .tutorder  absolutepaths.tut  environmentvariables.tut  parent.tut  path.tut  piping.tut  processmanagement.tut  rootpermission.tut  tabcompletion.tut
tutorials/OtherCommands/: .tutorder  echo.tut  touch.tut  vi.tut
